Arregladas las verificaciones de los argumentos para las propiedades en la clase Estudiante para limpiar espacios en blancos y caracteres vacíos.